--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "vercel-build": "echo 'Building for Vercel'"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "express-session": "^1.18.0",
-    "serverless-http": "^3.2.0"
+    "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
