--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,6 @@ yarn.lock
 # Environment variables
 .env
 
-# Firebase 
-firebase-service-account.json
-*firebase-service*.json
-*firebase*.json
-
 # Logs
 logs
 *.log
@@ -36,4 +31,14 @@ data/*.json
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db 
+Thumbs.db
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Dependencies
+/.pnp
+.pnp.js 
