--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "express-session": "^1.18.0",
-    "firebase": "^11.8.1",
-    "firebase-admin": "^13.4.0"
+    "express-session": "^1.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
